# git8

./: .env  .gitignore  Cargo.toml  README.md  notes.md
migrations/: 20260119192000_create_users_table.sql  20260119212000_create_sessions_table.sql  20260119214627_create_repositories_table.sql  20260119215903_add_public_to_repositories.sql  20260120165214_create_issues_and_comments_tables.sql  20260120180000_add_labels_and_assignees.sql  20260120190000_create_pull_requests_table.sql  20260120194443_rename_user_id_to_author_id_in_pull_request_comments.sql  20260120203000_create_pull_request_comments_table.sql  20260126203000_create_reviews_table.sql
src/: auth.rs  db.rs  git_api.rs  git_backend.rs  issues.rs  main.rs  pull_requests.rs
src/pull_requests/: comments.rs  reviews.rs
